# AhmerPDF

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
AhmerPDFActivity/: .gitignore  build.gradle  proguard-rules.pro
AhmerPDFActivity/src/main/: AndroidManifest.xml
AhmerPDFActivity/src/main/java/com/ahmer/ahmerpdf/: DialogGoTo.java  DialogInfo.java  DialogJumpTo.java  DialogMoreInfo.java  GoToDialog.java  (+2 more)
AhmerPDFActivity/src/main/res/drawable/: background_dialog.xml  background_edit_text.xml  background_icon_clicked.xml  background_icon_selector.xml  ic_about_book.xml  ic_close.xml  ic_email_colored.xml  ic_get_app.xml  ic_information.xml  ic_information_bright.xml  ic_information_dull.xml  ic_menu_pdf_goto.xml  ic_menu_pdf_horizontal.xml  ic_menu_pdf_info.xml  ic_menu_pdf_moon.xml  ic_menu_pdf_search.xml  ic_menu_pdf_sun.xml  ic_menu_pdf_vertical.xml  ic_person.xml  ic_sd_card.xml  ic_settings.xml  ic_thanks.xml  ic_version.xml  info_icon_animation.xml  selector_visible_icon.xml  visibility.xml  visibility_off.xml
AhmerPDFActivity/src/main/res/drawable-mdpi/: bg_edit_text.xml  bg_rounded_card.xml  ic_pdf_cancel.xml  ic_pdf_lock.xml  ic_toolbar_arrow_back.xml  visibility.xml  visibility_off.xml
AhmerPDFActivity/src/main/res/layout/: activity_main.xml  activity_pdf.xml  activity_pdf_app_bar_main.xml  dialog_jump_page.xml  dialog_pdf_goto.xml  dialog_pdf_info.xml  dialog_pdf_jumpto.xml  dialog_pdf_password.xml  toolbar.xml
AhmerPDFActivity/src/main/res/menu/: pdf.xml  pdf_menu_icon.xml
AhmerPDFActivity/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
AhmerPDFActivity/src/main/res/values-night/: colors.xml
AhmerPDFViewer/: README.md  bintrayviewer.gradle  build.gradle  installviewer.gradle
AhmerPDFViewer/src/main/: AndroidManifest.xml
AhmerPDFViewer/src/main/res/drawable/: default_scroll_handle_bottom.xml  frame.xml
AhmerPDFViewer/src/main/res/drawable-v24/: default_scroll_handle_right.xml
AhmerPDFViewer/src/main/res/values/: colors.xml  dimens.xml  strings.xml
AhmerPdfium/: .gitignore  CMakeLists.txt  README.md  bintraypdfium.gradle  build.gradle  installpdfium.gradle
AhmerPdfium/src/main/: AndroidManifest.xml
AhmerPdfium/src/main/cmake/: mainJNILib.cpp
AhmerPdfium/src/main/cmake/include/: fpdf_annot.h  fpdf_attachment.h  fpdf_doc.h  fpdf_edit.h  fpdf_formfill.h  fpdf_javascript.h  fpdf_ppo.h  fpdf_signature.h  fpdf_transformpage.h  fpdfview.h
AhmerPdfium/src/main/cmake/include/cpp/: fpdf_deleters.h
AhmerPdfium/src/main/cmake/utils/: Compat.h  Timers.h
AhmerPdfium/src/main/cpp/: CMakeLists.txt  mainJNILib.cpp  util.h
AhmerPdfium/src/main/cpp/include/: fpdf_annot.h  fpdf_attachment.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_formfill.h  fpdf_progressive.h  fpdf_save.h  fpdf_signature.h  fpdf_structtree.h  fpdf_thumbnail.h  fpdf_transformpage.h  fpdfview.h  java_env.cpp  java_env.h  util.h
AhmerPdfium/src/main/cpp/include/cpp/: fpdf_deleters.h  fpdf_scopers.h
AhmerPdfium/src/main/cpp/utils/: Errors.h  Mutex.h
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/: Bookmark.java  Link.java  Meta.java  PdfDocument.java  PdfPage.java  PdfPasswordException.java  PdfiumCore.java  SearchHandle.java  SearchRecord.java
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/bookmarks/: BookMarkEntry.java  BookMarkNode.java
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/search/: FPDFTextSearchContext.java  SearchHandler.java  SearchHit.java  TextSearchContext.java
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/treeview/: TreeViewAdapter.java  TreeViewNode.java
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/util/: Size.java  SizeF.java
AhmerPdfium/src/main/java/com/ahmer/afzal/pdfium/writer/: PDFWriter.java  PDFWriterImpl.java  PdfWriteCallback.java
AhmerPdfium/src/main/jni/: Application.mk
AhmerPdfium/src/main/jni/include/: fpdf_dataavail.h  fpdf_edit.h  fpdf_ext.h  fpdf_formfill.h  fpdf_fwlevent.h  fpdf_sysfontinfo.h  fpdf_text.h  fpdfview.h
AhmerPdfium/src/main/jni/src/: mainJNILib.cpp  util.hpp
Pdf/: build.gradle
Pdf/src/main/: AndroidManifest.xml
Pdf/src/main/res/layout/: activity_pdf.xml
Pdf/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
